Prevent star and back button overlap

--- a/root/css/RecipePage.css
+++ b/root/css/RecipePage.css
@@ -159,7 +159,7 @@
   border: none;
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1350px) {
   .recipe-button-container {
     position: relative;
     top: 0;
